appId: com.toughra.ustadmobile
---
# this test record attendance of students
  # this record 2 nd student in list as late and others as present
# test parameters needs to provide for this test :
# 1) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: "ATTENDANCE"
- tapOn:
      id: "floating_action_button"
- tapOn: "Next"
- tapOn: "Mark all present"
- tapOn:
      id: "com.toughra.ustadmobile:id/late_button"
      index: 1
- tapOn: "Save"
