appId: com.toughra.ustadmobile
---
# this flow directs the user to downloads screen if it's not visible when needed
- repeat:
     while:
        visible: "Recent"
     commands:
        - tapOn:
             text: "Show roots"
        - tapOn:
            text: "Downloads"
- repeat:
    while:
      visible: "Downloads"
    commands:
      - scrollUntilVisible:
            element:
              text: ${TESTFILENAME}
            direction: DOWN
      - tapOn:
          text: ${TESTFILENAME}


