appId: com.toughra.ustadmobile
---
# student sends the request to join an existing course using code
# Test parameters needs to provide for this test :
 # 1) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
- tapOn:
    id: "floating_action_button"
- tapOn: "Join existing course"
- longPressOn: "Invite code*"
- tapOn: "Paste"
- hideKeyboard
- tapOn: "Submit"

