appId: com.toughra.ustadmobile
---
# Test parameters needs to provide for this test :
# 1) TESTFILENAME : provide the content name inside the 'test-files/content' folder
# 2) TESTCOURSENAME : provide the course title, it should be a string
# 3) CONTROLSERVER: ${CONTROLSERVER} : provides the test-control-server address
# 4) TESTSERIAL: ${TESTSERIAL} : provides the device serial number
# 5) TESTRESULTSDIR : ${TESTRESULTSDIR} : provides the path to store test results
# 6) ASSIGNMENTNAME: Provide assignment name of string type

# clear the downloads
- evalScript: ${http.get(CONTROLSERVER + "cleardownloads?device=" + TESTSERIAL)}
# push the test file to the downloads
- evalScript: ${http.get(CONTROLSERVER + "pushcontent?test-file-name=" + TESTFILENAME +"&device=" + TESTSERIAL)}

- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: ${ASSIGNMENTNAME}
- tapOn: "ADD FILE"
- runFlow:
    when:
      notVisible: "Downloads"
    file: "./redirect_to_downloads.yaml"
- tapOn: ${TESTFILENAME}
- tapOn: "SUBMIT"
- extendedWaitUntil:
    notVisible: "SUBMIT"
    timeout: 10000