appId: com.toughra.ustadmobile
---
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) ASSIGNMENTNAME: provide assignment name of string type
# 3) TEXT : provide the TEXT to submit assignmentof string type
- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn: ${ASSIGNMENTNAME}
- tapOn: "ADD TEXT"
- tapOn:
    id: "com.toughra.ustadmobile:id/text_editor"
- inputText: ${TEXT}
- tapOn: "DONE"
- assertNotVisible:
      text: "SUBMIT"

