appId: com.toughra.ustadmobile
---
# Test parameters needs to provide for this test :
# 1) TESTCOURSENAME: provide course name of string type
# 2) STUDENTNAME: provide student full name of string type
# 3) POINT: provide mark in string type
# 4) TESTRESULTSDIR : provide location to store results

- tapOn: "Courses"
- tapOn: ${TESTCOURSENAME}
- tapOn:
    id: "com.toughra.ustadmobile:id/item_course_block_icon"
- tapOn: "SUBMISSIONS"
- tapOn: ${STUDENTNAME}
- tapOn: "Points"
- inputText: ${POINT}
- hideKeyboard
- tapOn:
    id: "com.google.android.inputmethod.latin:id/icon"
    index: 2
- tapOn: "UPDATE GRADE"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/added_assignment_grade_teacherView"