- runFlow: "../common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "../common/select_site.yaml"
#admin enable user registration
- runFlow:
    file: "../common/user_login.yaml"
- runFlow:
    file: "../common/enable_user_registration.yaml"
- assertVisible: "Yes"
- runFlow: "../common/clear_state_and_learning_space_new_userflow.yaml"
- runFlow: "../common/select_site.yaml"
- tapOn: 2024
- longPressOn: 2024
- inputText: 2009
- hideKeyboard
- tapOn: 2009
- tapOn: "* Required"
- tapOn: "Next"
- extendedWaitUntil:
    visible:  "Terms and company policies"
    timeout: 10000
- tapOn: "Accept"
- tapOn: "Full name*"
- inputText: "User ABC"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn: "Sign-up with passkey"
- assertVisible: "Create passkey"
- tapOn: "Continue"
- extendedWaitUntil:
    visible: ""
- assertVisible: "Courses"