appId: com.toughra.ustadmobile
env:
  TESTNAME: "001_001_admin_can_add_content_001-h5p"
  TESTRESULTSDIR: "${TESTRESULTSDIR}/001_001_admin_can_add_content_001-h5p"
---
- clearState: com.toughra.ustadmobile
#- runFlow:
 #   file: "../common/startserver.yaml"
  #  env:
   #   CONTROLSERVER: ${CONTROLSERVER}
    #  TESTSERIAL: ${TESTSERIAL}
     # TESTNAME: ${TESTNAME}
#- runFlow:
 #   file: "../common/manual_server_run.yaml"
- runFlow:
    file: "../common/add_content.yaml"
    env:
      TESTFILENAME: "H5p_Content.h5p"
      TESTCONTENTNAME: "AddContentH5pTest"
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
- runFlow:
    file: "../common/login_download_and_open_content.yaml"
    env:
      TESTCONTENTNAME: "AddContentH5pTest"
- assertVisible: "Check the answers. The responses will be marked as correct, incorrect, or unanswered."
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/content_download_and_open"
- back
- tapOn: "ATTEMPTS"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/h5p_attempts_page"