appId: com.toughra.ustadmobile
tags:
  - checklist1
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/001_001_admin_can_add_content_005-using_link"
  TESTNAME: "001_001_admin_can_add_content_005-using_link"
  CONTROLSERVER: ${CONTROLSERVER}
  TESTSERIAL: ${TESTSERIAL}
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
- runFlow: "../common/clear_state_and_get_started.yaml"
# select site
- runFlow: "../common/select_site.yaml"
# admin login
- runFlow:
    file: "../common/user_login.yaml"
# adding content to library
- tapOn: "Library"
- tapOn: "CONTENT"
# download folder and download content from inside folder
- tapOn: "Add using link"
- tapOn:
    text: "Enter Url"
    index: 1
- inputText: "http://localhost:8075/test-files/content/"
- tapOn: "NEXT"
- tapOn: "content"
- eraseText
- inputText: "LinkTestFolder"
- tapOn: "SAVE"
- tapOn: "LinkTestFolder"
- tapOn:
    id: "com.toughra.ustadmobile:id/item_content_entry_list"
    index: 0
- tapOn: "DOWNLOAD"
- tapOn: "DOWNLOAD"
- extendedWaitUntil:
    visible: "Delete"
    timeout: 600000
- tapOn: "OPEN"
- tapOn:
    id: "com.toughra.ustadmobile:id/menu_epub_content_showtoc"
- assertVisible: "Oliver Twist; or, The Parish Boy's Progress. Illustrated"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/content_download_and_open"
- back
- back
- tapOn: "Library"
- tapOn: "CONTENT"
- tapOn: "Add using link"
- tapOn:
    text: "Enter Url"
    index: 1
- inputText: "http://localhost:8075/test-files/content/H5p_Content.h5p"
- tapOn: "NEXT"
- tapOn: "SAVE"
- tapOn:
    id: "com.toughra.ustadmobile:id/item_content_entry_list"
    index: 1
- tapOn: "DOWNLOAD"
- tapOn: "DOWNLOAD"
- extendedWaitUntil:
    visible: "Delete"
    timeout: 100000
- tapOn: "OPEN"
- assertVisible: "Check the answers. The responses will be marked as correct, incorrect, or unanswered."
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/content_download_and_open"
- back
- back
- tapOn: "Library"
- tapOn: "CONTENT"
- tapOn: "Add using link"
- tapOn:
    text: "Enter Url"
    index: 1
- inputText: "http://localhost:8075/test-files/content/Video_Content.mp4"
- tapOn: "NEXT"
- tapOn: "SAVE"
- tapOn: "Video_Content.mp4"
- tapOn: "DOWNLOAD"
- tapOn: "DOWNLOAD"
- extendedWaitUntil:
    visible: "Delete"
    timeout: 100000
- tapOn: "OPEN"
- scroll
- runFlow:
    when:
      visible:
        text: "Play"
    file: "../common/play_video_content.yaml"