appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/003_002_add_module_text_blocks_and_perform_indent_hide_delete_actions"
  TESTNAME:  "003_002_add_module_text_blocks_and_perform_indent_hide_delete_actions"
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}

- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
#admin login
- runFlow:
    file: "../common/user_login.yaml"
- runFlow:
    file: "../common/add_course.yaml"
    env:
     TESTCOURSENAME: "Test Course Block Test"
# edit the course to add blocks
- tapOn: "Edit"
# add module ------ 1
- runFlow:
    file: "../common/add_module_block.yaml"
    env:
      MODULETITLE: "SEMESTER 1"
#add text block ------ 1
- runFlow:
    file: "../common/add_text_block.yaml"
    env:
      TEXTTITLE: "PRIMARY COLOURS"
      TEXT: "RED,BLUE,GREEN"
# hide the block- module
- repeat:
    while:
      notVisible:
        id: "com.toughra.ustadmobile:id/item_course_block_more_option"
        index: 0
    commands:
      - swipe:
          start: 100,400
          end: 100,100
- tapOn:
    id: "com.toughra.ustadmobile:id/item_course_block_more_option"
    index: 0
- tapOn: "Hide"
- tapOn: "SAVE"
- assertNotVisible:
    text: "SEMESTER 1"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/module_block_is_hidden"
- tapOn: "Edit"
#  swipe down to  view  added  bloc ks
- repeat:
    while:
      notVisible:
        id: "com.toughra.ustadmobile:id/item_course_block_more_option"
        index: 0
    commands:
      - swipe:
          start: 100,400
          end: 100,100

# unhide the module
- tapOn:
    id: "com.toughra.ustadmobile:id/item_course_block_more_option"
    index: 0
- tapOn: "Unhide"
- assertVisible:
    text: "SEMESTER 1"
# indent the text block ----- 1
- tapOn:
    id: "com.toughra.ustadmobile:id/item_course_block_more_option"
    index: 1
- tapOn: "Indent"
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/module_block_unhide"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/text_block_indented"
# unindent text block ----- 1
- tapOn: "Edit"
- repeat:
    while:
      notVisible:
        id: "com.toughra.ustadmobile:id/item_course_block_more_option"
        index: 1
    commands:
      - swipe:
          start: 100,400
          end: 100,100
- tapOn:
    id: "com.toughra.ustadmobile:id/item_course_block_more_option"
    index: 1
- tapOn: "Unindent"
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/text_block_unindented"
# Delete text block --- 1
- tapOn: "Edit"
- repeat:
    while:
      notVisible:
        id: "com.toughra.ustadmobile:id/item_course_block_more_option"
        index: 1
    commands:
      - swipe:
          start: 100,400
          end: 100,100

- tapOn:
    id: "com.toughra.ustadmobile:id/item_course_block_more_option"
    index: 1
- tapOn: "Delete"
- tapOn: "SAVE"
- assertNotVisible:
    text: "PRIMARY COLOURS"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/text_block_deleted"
