appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/003_003_add_existing_content_in_library_as_block"
  TESTNAME: "003_003_add_existing_content_in_library_as_block"
---
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
  #---------add content to library ---------#
- runFlow:
    file: "../common/clear_login_and_add_content.yaml"
    env:
     TESTFILENAME: "H5p_Content.h5p"
     TESTCONTENTNAME: H5PContent
     CONTROLSERVER: ${CONTROLSERVER}
     TESTSERIAL: ${TESTSERIAL}
- tapOn: "SAVE"
#---------add content to library ---------#
- runFlow:
   file: "../common/push_test_file_to_downloads.yaml"
   env:
    TESTFILENAME: "Epub_Content1.epub"

- launchApp
# adding content to library
- tapOn: "Library"
- tapOn:
    id: "floating_action_button"
- tapOn: "From file"
- runFlow:
    when:
      notVisible: "Downloads"
    file: "../common/redirect_to_downloads.yaml"
- tapOn: "Epub_Content1.epub"

- tapOn: "SAVE"
#---------add course ---------#
- runFlow:
    file: "../common/add_course.yaml"
    env:
      TESTCOURSENAME: "Existing Content Block Test"
#----add teacher to the course----#
- runFlow:
    file: "../common/add_new_teacher_inside_course.yaml"
    env:
      TESTCOURSENAME: "Existing Content Block Test"
      TEACHERFIRSTNAME: "Teacher"
      TEACHERLASTNAME: "1"
      USERNAME: "t1"
      GENDER: "Female"
      PASSWORD: "test"
#--- add epub content already added by admin in library to course block----#
- repeat:
    while:
      notVisible: "Course"
    commands:
      - back
- tapOn: "Course"
- runFlow:
    file: "../common/add_existing_content_block_to_course.yaml"
- tapOn: "E-book"
- tapOn: "Done"
- tapOn: "SAVE"

# teacher add existing content in library to course as a content block
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: "t1"
      PASSWORD: "test"
- tapOn: "courses"
- tapOn: "Existing Content Block Test"
- runFlow:
    file: "../common/add_existing_content_block_to_course.yaml"
- tapOn: "Interactive"
- tapOn: "Done"
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/able_to_add_existing_content_block_inside_course"


