appId: com.toughra.ustadmobile
tags:
  - checklist4
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/004_012_assignment_individual_submission_peer_marking"
  TESTNAME: 004_012_assignment_individual_submission_peer_marking
---
- clearState: com.toughra.ustadmobile
- clearState: com.toughra.ustadmobile2
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
# admin able to add a course and edit that course
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
- runFlow:
    file: "../common/create_course_with_1teacher_4students.yaml"
    env:
      TESTCOURSENAME: Test Course

#teacherLogin
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: t1
      PASSWORD: test
- runFlow:
    file:  "../common/add_assignment_peer_marking.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
#-------------------------------------------------------------------------student submit assignment
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
    env:
      USERNAME: s1
      PASSWORD: test
- tapOn: "Courses"
- tapOn: "Test Course"
- tapOn: "Test Assignment"
- tapOn: "SUBMISSIONS"
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
    env:
      USERNAME: s3
      PASSWORD: test
- tapOn: "Courses"
- tapOn: "Test Course"
- tapOn: "Test Assignment"
- tapOn: "SUBMISSIONS"
- runFlow:
    file: "../build/common-app2/student_submit_assignment_text.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
      TEXT: "Numbers - 1,2,3,4,5,6,7,8,9,10"
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: s2
      PASSWORD: test
- runFlow:
    file: "../common/peer_marking_assignment_.yaml"
    env:
      TESTCOURSENAME: Test Course
      ASSIGNMENTNAME: Test Assignment
      STUDENTNAME: Student 1
      TEXT: "Numbers - 1,2,3,4,5,6,7,8,9,10"
      POINT: 8